// Vitest Snapshot v1

exports[`parse -1+2*3+5 1`] = `
{
  "left": {
    "left": {
      "body": {
        "type": "value",
        "value": "1",
      },
      "type": "prefix-",
    },
    "right": {
      "left": {
        "left": {
          "type": "value",
          "value": "2",
        },
        "right": {
          "type": "value",
          "value": "6",
        },
        "type": "infix*",
      },
      "right": {
        "type": "value",
        "value": "3",
      },
      "type": "infix/",
    },
    "type": "infix+",
  },
  "right": {
    "type": "value",
    "value": "5",
  },
  "type": "infix+",
}
`;

exports[`parse 1 + 2^3^4*5-6 1`] = `
{
  "left": {
    "left": {
      "type": "value",
      "value": "1",
    },
    "right": {
      "left": {
        "left": {
          "type": "value",
          "value": "2",
        },
        "right": {
          "left": {
            "type": "value",
            "value": "3",
          },
          "right": {
            "type": "value",
            "value": "4",
          },
          "type": "infix^",
        },
        "type": "infix^",
      },
      "right": {
        "type": "value",
        "value": "5",
      },
      "type": "infix*",
    },
    "type": "infix+",
  },
  "right": {
    "type": "value",
    "value": "6",
  },
  "type": "infix-",
}
`;
